.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spendpulse-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - budget.serg046.it
    secretName: spendpulse-tls
  rules:
  - host: budget.serg046.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spendpulse-service
            port:
              number: 80
